--- a/static/index.html
+++ b/static/index.html
@@ -14,13 +14,13 @@
 	<div data-role="header">
 		<h1>Quadoor</h1>
 	</div><!-- /header -->
-
+  <center><img src="stream.mjpg" width="100%" height="0.02%"></center>
 	<div role="main" class="ui-content">
-        <button class="ui-btn" value="1">engine 1</button>
-        <button class="ui-btn" value="2">engine 2</button>
         <button class="ui-btn" value="3">engine 3</button>
-        <button class="ui-btn" value="4">engine 4</button>
-        <button class="ui-btn" value="5">engine 5</button>
+        <button class="ui-btn" value="7">engine 7</button>
+        <button class="ui-btn" value="13">engine 13</button>
+        <button class="ui-btn" value="19">engine 19</button>
+        <button class="ui-btn" value="23">engine 23</button>
 	</div><!-- /content -->
 
 </div><!-- /page -->
